--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,6 @@ media
 # in your Git repository. Update and uncomment the following line accordingly.
 # <django-project-name>/staticfiles/
 
+/.venv/
+
+
